07May20=======================================================================
1. Revert changes made since 25Apr concerning IP address reconciliation.
25Apr20=======================================================================
1. Add maximum no of users on node to show/cluster.
2. Add ability to show last n lines of debugging ring buffer.
3. Remove redundant wpxloc.dat file.
24Apr20=======================================================================
1. Add 'progress' debugging for showing that stuff is happening in nologchan
   a.k.a ringbuffer only mode. 
2. Fix grepdbg so that no regex argument simply lists the file. 
3. Add CTY-3008 prefixes.
22Apr20=======================================================================
1. Fix the module search path in update_sysop.pl
2. Add latest prefixes CTY-3007
3. Fix unset/startup command. This will only work for users' start up scripts
   things like user_default or startup must be edited or removed by hand. 
21Apr20=======================================================================
1. Finally fix the "actually tranmit" any output (like from 'logout' files)
   to users before disconnecting. This also means that disconnecting nodes
   now receive the (totally redundant, but hey) PC39 reason for disconnection.
20Apr20=======================================================================
1. Speed up sh/log (including chat, rcmd, ann etc) that search the system
   log files, by removing a completely redundant subsystem and also leveraging
   the core operating system utility 'tac', if it's available. 
19Apr20=======================================================================
1. The long haul that is the mojo branch has started up again. It's something
   to do during this lockdown.
2. The problems and instabilities around running commands that worked in 
   forked processes, when used other than by normally logged in users (e.g. 
   in the local crontab), have been fixed.  