@@ -17,11 +17,6 @@ use strict;
 use vars qw(%list %valid @ISA $max $filterdef);
 @ISA = qw(Route);
 
-%valid = (
-		  parent => '0,Parent Calls,parray',
-		  ip => '0,IP Address',
-);
-
 $filterdef = $Route::filterdef;
 %list = ();
 $max = 0;
